unpackaged/main/default/objects/ia_crm__Usage__c/ia_crm__Usage__c.object-meta.xml
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>USG-{0000000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>