unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>