unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Intacct_Contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Contract</label>
    <referenceTo>ia_crm__Intacct_Contract__c</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>