unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Intacct_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Contract Line</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR (2 AND 3 AND 4)</booleanFilter>
        <filterItems>
            <field>ia_crm__Intacct_Contract_Line__c.ia_crm__Intacct_Contract__c</field>
            <operation>equals</operation>
            <valueField>$Source.ia_crm__Intacct_Contract__c</valueField>
        </filterItems>
        <filterItems>
            <field>ia_crm__Intacct_Contract_Line__c.ia_crm__Contract__c</field>
            <operation>equals</operation>
            <valueField>$Source.ia_crm__Contract__c</valueField>
        </filterItems>
        <filterItems>
            <field>ia_crm__Intacct_Contract_Line__c.ia_crm__Intacct_Contract__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.ia_crm__Intacct_Contract__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Intacct_Contract_Line__c</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>