unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Intacct_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_Id__c</fullName>
    <formula>ia_crm__Intacct_Contract__r.ia_crm__Created_at_Entity__r.ia_crm__Intacct_Entity_ID__c</formula>
    <label>Intacct Entity Id</label>
    <type>Text</type>
</CustomField>