unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Intacct_Usage_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Usage_Id__c</fullName>
    <label>Intacct Usage Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>