unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Is_Deleted_From_Intacct__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Deleted_From_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted From Intacct</label>
    <type>Checkbox</type>
</CustomField>