unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Product__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>