unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>