unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_DocumentId__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_DocumentId__c</fullName>
    <label>(Not Used)SB DocumentId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>