unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_Intacct_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Intacct_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Intacct Contract Line</label>
    <referenceTo>ia_crm__Intacct_Contract_Line__c</referenceTo>
    <relationshipLabel>Usages (SB Intacct Contract Line)</relationshipLabel>
    <relationshipName>Usages1</relationshipName>
    <type>Lookup</type>
</CustomField>