unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_Product__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Usages (SB Product)</relationshipLabel>
    <relationshipName>Usages1</relationshipName>
    <type>Lookup</type>
</CustomField>