unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Quantity__c</fullName>
    <label>SB Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>