unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Usage_Date__c</fullName>
    <label>SB Usage Date</label>
    <type>Date</type>
</CustomField>