unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__SB_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Usage_Type__c</fullName>
    <label>SB Usage Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>