unpackaged/main/default/objects/ia_crm__Usage__c/fields/ia_crm__Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Usage_Date__c</fullName>
    <label>Usage Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>