unpackaged/main/default/objects/ia_crm__Usage__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Intacct_Contract__c</columns>
    <columns>ia_crm__Account__c</columns>
    <columns>ia_crm__Intacct_Contract_Line__c</columns>
    <columns>ia_crm__Product__c</columns>
    <columns>ia_crm__Quantity__c</columns>
    <columns>ia_crm__Usage_Date__c</columns>
    <columns>ia_crm__Sync_With_Intacct__c</columns>
    <columns>ia_crm__Validation_Errors__c</columns>
    <columns>ia_crm__Synced_With_Intacct_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>